semi functional desktop AND possible mobile page. Issue with header on mobile

--- a/main2.css
+++ b/main2.css
@@ -13,7 +13,16 @@ a {
 a:link,a:visited {
   color:inherit;
 }
+h1 {
+  font-size:1.5em;
+}
 
+h2 {
+  font-size:1em;
+}
+
+
+/* flex parent */
 /* Relevant for index */
 #content {
   display:flex;
@@ -42,15 +51,6 @@ li {
   font-size: 20px;
 }
 
-
-/* flex parent */
-#container {
-  display:flex;
-  /* flex-direction:column; */
-  flex-wrap:wrap;
-  align-items: center;
-  background: linear-gradient(rgb(104, 104, 104),rgb(255, 255, 255),25%);
-}
 /* flex-child */
 #my-header {
   flex:1;
@@ -64,18 +64,18 @@ li {
   top:0;
 }
 
+/* WARNING! Remove duplicate class vs id names */
 #news-container {
   display:flex;
-}
-/* WARNING! Remove duplicate class vs id names */
-.news-container {
-  display:flex;
+  flex-wrap:wrap;
+  justify-content: center;
 }
 
 .newsitem {
-  margin: 5px;
-
-  min-width: 30vw;
+  margin: 10px;
+  padding:5px;
+  min-width: 250px;
+  max-width:calc(33vw - 30px);
   min-height: 15em;
   flex:1;
   /* border: 2px red solid; */
@@ -86,8 +86,6 @@ li {
 
 footer {
   width: 100vw;
-  /* border: 3px blue solid; */
-  /* position:absolute; */
   bottom:0;
   margin-top:100px;
   margin-bottom:15px;
@@ -96,8 +94,10 @@ footer {
 }
 
 #chikin {
-  /* margin-left:50%; */
-  flex: 0 0 auto;
+  margin-left:30%;
+  margin-right:30%;
+  /* flex: 0 0 auto; */
   max-width: 100vw;
+  max-height: calc(0.5 * 100vw);
   margin-top: 80px;
 }
